[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mababar-dua-api"
version = "0.1.0"
description = "A Python web framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MaBabar", email = "msa.acc@outlook.com" }]
keywords = ["asgi", "web", "framework", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["parse>=1.19.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Repository = "https://github.com/abrarshakhi/mababar-dua-api"

[tool.hatch.build.targets.wheel]
packages = ["src/mababar_dua_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
